# ChessSight

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: code-quality.yml
src/chesssight/: __init__.py
