[project]
name = "chesssight"
version = "0.1.0"
description = "ChessVisionDetect is a computer vision project designed to identify and classify chess pieces on a chessboard using image processing techniques. This repository contains the code and resources needed to detect chess pieces in real-time, providing a foundation for applications in automated chess analysis and gameplay."
authors = [
    {name = "Thibaut CHAUFFIER",email = "tchauffi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
packages = [{include = "chesssight", from = "src"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.10"
mypy = "^1.15.0"
black = "^25.1.0"

[tool.ruff]
line-length = 88  # Match black's default line length
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
