[project]
name = "chesssight"
version = "0.1.0"
description = "Computer vision tool for chess analysis and piece detection"
authors = [
    {name = "Thibaut CHAUFFIER",email = "tchauffi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry]
packages = [{include = "chesssight", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.10"
mypy = "^1.15.0"
black = "^25.1.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"


[tool.poetry.dependencies]
opencv-python = "^4.11.0.86"
torch = "^2.7.0"
torchvision = "^0.22.0"
matplotlib = "^3.10.3"


[tool.ruff]
line-length = 88  # Match black's default line length
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
